--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-start-rgb: 108, 90, 120;
+  --background-end-rgb: 130, 100, 190;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  margin: 0;
+  min-height: 100vh;
+  width: 100%;
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)),
+    rgb(var(--background-end-rgb))
+  );
+}
+
+h1 {
+  font-family: "Play", sans-serif;
+  font-weight: 700;
+  font-size: 38px;
+  text-align: center;
+}
+h2 {
+  font-family: "Play", sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  text-align: center;
+}
+
+button {
+  background: black;
+  border: 3px solid whitesmoke;
+  padding: 8px 25px;
+  min-width: 150px;
+  margin: auto;
+  border-radius: 16px;
+  color: whitesmoke;
+  font-family: "Play", sans-serif;
+  width: fit-content;
 }
